Add java version changes to wso2server.sh